# horizon-engine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  Vulkan Programming Guide - Graham Sellers.md  generate_audio.py  scene.json
.agent/rules/: cpp-core.rules.yaml  global.rules.yaml  opengl.rules.yaml  shader.rules.yaml  vulkan.rules.yaml
.agent/workflows/: build.md  general_analysis.workflow.yaml  renderer_review.workflow.yaml  shader_validation.workflow.yaml
.github/workflows/: antigravity.yml  engine-ci.yml
assets/models/character/joe/: license.txt  scene.gltf
assets/models/demon_weapon/: license.txt  scene.gltf
assets/models/vegetation/: periwinkle_plant_2k.gltf
assets/models/vegetation/island_tree_01/: island_tree_01_2k.gltf
assets/shaders/: billboard.frag  billboard.vert  bloom_extract.frag  blur.frag  brdf_lut.frag  brdf_lut.vert  debug_line.frag  debug_line.vert  depth.frag  depth.vert  equirect_to_cubemap.frag  equirect_to_cubemap.vert  geometry.frag  geometry.vert  grass.frag  grass.vert  grid.frag  grid.vert  hdr.frag  irradiance_convolution.frag  outline.frag  outline.vert  particle.frag  particle.vert  pbr.frag  pbr.vert  phong.frag  phong.vert  prefilter.frag  quad.vert  skybox.frag  skybox.vert  skybox_hdr.frag  skybox_hdr.vert  ssao.frag  ssao_blur.frag  terrain.frag  terrain.vert  volumetric.frag  volumetric.vert  (+2 more)
assets/shaders/common/: camera.glsl  fog.glsl  lights.glsl  math.glsl  pbr_functions.glsl  scene_data.glsl
assets/shaders/deferred/: composite.frag  fullscreen.vert  geometry.frag  geometry.vert  lighting.frag  shadow.frag  shadow.vert  taa.frag
assets/shaders/lib/core/: color.glsl  defines.glsl  math.glsl  uniforms.glsl
assets/shaders/lib/effects/: atmosphere.glsl  postprocess.glsl  ssao.glsl  taa.glsl
assets/shaders/lib/lighting/: brdf.glsl  ibl.glsl  lighting.glsl  shadows.glsl
assets/shaders/uber/: pbr.frag  pbr.vert
docs/: architecture.md  index.md
docs/about/: features.md  introduction.md
docs/contributing/: development.md  style_guide.md
docs/getting_started/: building.md  step_by_step.md
docs/manual/: architecture.md  rendering.md
engine/: CMakeLists.txt
engine/animation/: animation_blender.cpp  animation_blender.hpp  animator.hpp  ik_solver.cpp  ik_solver.hpp  skeleton.cpp  skeleton.hpp
engine/assets/: asset_handle.hpp  asset_registry.cpp  asset_registry.hpp  cubemap.cpp  cubemap.hpp  material.hpp  model.cpp  model.hpp  texture.cpp  texture.hpp
engine/audio/: audio_engine.cpp  audio_engine.hpp
engine/core/: game_loop.cpp  game_loop.hpp  log.cpp  log.hpp  memory.cpp  memory.hpp  types.hpp
engine/ecs/: component_storage.hpp  entity.hpp  entity_manager.cpp  system.hpp  world.cpp  world.hpp
engine/physics/: fps_character_controller.cpp  fps_character_controller.hpp  hitbox_system.cpp  hitbox_system.hpp  physics_config.hpp  physics_interactions.cpp  physics_interactions.hpp  physics_world.cpp  physics_world.hpp  projectile_system.cpp  projectile_system.hpp
engine/platform/: input.cpp  input.hpp  platform.hpp  window.cpp  window.hpp
engine/renderer/: billboard.cpp  billboard.hpp  camera.cpp  camera.hpp  cinematic_camera.cpp  cinematic_camera.hpp  debug_renderer.cpp  debug_renderer.hpp  deferred_renderer.cpp  deferred_renderer.hpp  grass.cpp  grass.hpp  ibl.cpp  ibl.hpp  mesh.cpp  mesh.hpp  particle_system.cpp  particle_system.hpp  render_item.hpp  render_utils.hpp  renderer.cpp  renderer.hpp  ssao.cpp  ssao.hpp  terrain.cpp  terrain.hpp  water.cpp  water.hpp
engine/renderer/opengl/: buffer.cpp  buffer.hpp  framebuffer.cpp  framebuffer.hpp  gl_context.hpp  shader.cpp  shader.hpp  uniform_buffer.cpp  uniform_buffer.hpp
engine/rhi/: rhi.hpp  rhi_command_list.hpp  rhi_descriptor.hpp  rhi_device.hpp  rhi_pipeline.hpp  rhi_resources.hpp  rhi_types.hpp
engine/rhi/vulkan/: vk_buffer.cpp  vk_buffer.hpp  vk_command_list.cpp  vk_command_list.hpp  vk_common.hpp  vk_descriptor.cpp  vk_descriptor.hpp  vk_device.cpp  vk_device.hpp  vk_pipeline.cpp  vk_pipeline.hpp  vk_sampler.cpp  vk_sampler.hpp  vk_swapchain.cpp  vk_swapchain.hpp  vk_sync.cpp  vk_sync.hpp  vk_texture.cpp  vk_texture.hpp
engine/scene/: components.cpp  components.hpp  scene.cpp  scene.hpp  scene_serializer.cpp  scene_serializer.hpp
engine/ui/: debug_overlay.cpp  debug_overlay.hpp  imgui_layer.cpp  imgui_layer.hpp
game/: CMakeLists.txt
game/src/: application.cpp  application.hpp  editor_ui.cpp  editor_ui.hpp  game_config.hpp  main.cpp  scene_settings.hpp
game/src/systems/: animation_system.cpp  animation_system.hpp  character_system.cpp  character_system.hpp  lifetime_system.cpp  lifetime_system.hpp  physics_system.cpp  physics_system.hpp  player_system.cpp  player_system.hpp
tests/: CMakeLists.txt
tests/unit/: test_asset_handle.cpp  test_camera.cpp  test_ecs.cpp  test_game_loop.cpp  test_hitbox_system.cpp  test_main.cpp  test_memory.cpp  test_projectile.cpp  test_types.cpp
